--- a/configurations/gcp/cloud-config.yml
+++ b/configurations/gcp/cloud-config.yml
@@ -24,7 +24,7 @@ vm_types:
     machine_type: n1-standard-1
     root_disk_size_gb: 20
     root_disk_type: pd-ssd
-    service_account: ((service_account))
+    service_account: ((service_account_common))
     tags: ((tags))
 
 - name: master
@@ -32,7 +32,7 @@ vm_types:
     machine_type: n1-standard-1
     root_disk_size_gb: 20
     root_disk_type: pd-ssd
-    service_account: ((service_account))
+    service_account: ((service_account_master))
     tags: ((tags))
 
 - name: worker
@@ -40,7 +40,7 @@ vm_types:
     machine_type: n1-standard-2
     root_disk_size_gb: 100
     root_disk_type: pd-ssd
-    service_account: ((service_account))
+    service_account: ((service_account_worker))
     tags: ((tags))
 
 disk_types:
