--- a/configurations/gcp/project-config.yml
+++ b/configurations/gcp/project-config.yml
@@ -5,4 +5,6 @@ tags: # tags below are used if jumpbox and NAT were deployed using https://githu
   - "no-ip" # allow access to the Internet from BOSH director using NAT
   - internal # allow access to the instances in same network from BOSH
 zone: # name of GCP zone
-service_account: # service account to set as default on Kubo VMs
+service_account_master: # service account to be set on Kubo Master VMs
+service_account_worker: # service account to be set on Kubo Worker VMs
+service_account_common: # service account to be set on Kubo common VMs
