--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -180,5 +180,4 @@ variables:
   type: certificate
   options:
     ca: kubo_ca
-    common_name: ((kubernetes_master_host))
-    alternative_names: [((kubernetes_master_host))]
+    common_name: docker.kubo.internal
