Embeds addons-spec in the manifest if specified in director.yml
[#152647926]

Signed-off-by: Ben Chapman <bchapman@pivotal.io>

--- a/manifests/ops-files/addons-spec.yml
+++ b/manifests/ops-files/addons-spec.yml
@@ -1,4 +1,9 @@
 - type: replace
-  path: /instance_groups/name=master/jobs/name=kubernetes-system-specs/properties/addons-spec?
-  value:  | #do not delete the following line return
-  
+  path: /instance_groups/name=master/jobs/-
+  value:
+    name: apply-specs
+    release: kubo
+    properties:
+      authorization-mode: ((authorization-mode))
+      admin-password: ((kubo-admin-password))
+      addons-spec: ((addons-spec))
