Fix bosh link for cloud-provider
[#152853461]

Signed-off-by: Konstantin Semenov <ksemenov@pivotal.io>

--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -36,6 +36,8 @@ instance_groups:
   - name: cloud-provider
     release: kubo
     properties: {}
+    provides:
+      cloud-provider: {as: master}
   - name: flanneld
     release: kubo
   - name: kubernetes-api
@@ -72,6 +74,8 @@ instance_groups:
       admin-username: admin
       admin-password: ((kubo-admin-password))
       authorization-mode: *authorization_mode
+    consumes:
+      cloud-provider: {from: master}
   - name: etcd
     release: kubo-etcd
     properties:
