Allow user to scale the number of worker nodes
[#153055729]

Signed-off-by: Tony Wong <twong@pivotal.io>

--- a/configurations/generic/project-config.yml
+++ b/configurations/generic/project-config.yml
@@ -10,6 +10,8 @@ dns_recursor_ip: # DNS IP address for resolving non-BOSH hostnames
 
 kubo_release_url: https://storage.googleapis.com/kubo-public/kubo-release-latest.tgz
 
+worker_count: 3
+
 # Proxy routing mode settings
 # Uncomment this section when using Proxy routing mode
 # routing_mode: proxy
