--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -88,7 +88,7 @@ instance_groups:
   persistent_disk_type: 5120
 
 - name: worker
-  instances: 3
+  instances: ((worker_count))
   networks:
   - name: *network-name
   azs: [z1]
