Add kubelet password and master tls certs to all the jobs with kubeconfig
[#153211618]

Signed-off-by: Akshay Mankar <amankar@pivotal.io>

--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -71,9 +71,12 @@ instance_groups:
   - name: kubernetes-system-specs
     release: kubo
     properties:
+      kubelet-password: ((kubelet-password))
       admin-username: admin
       admin-password: ((kubo-admin-password))
       authorization-mode: *authorization_mode
+      tls:
+        kubernetes: ((tls-kubernetes))
     consumes:
       cloud-provider: {from: master}
   - name: etcd
@@ -128,7 +131,9 @@ instance_groups:
   - name: kubelet
     release: kubo
     properties:
+      kubelet-password: ((kubelet-password))
       tls:
+        kubernetes: ((tls-kubernetes))
         kubelet: ((tls-kubelet))
   - name: kubernetes-proxy
     release: kubo
