Move kubeconfig for route-sync in route sync
Also add ca.pem to controller-manager

[#153211618]

Signed-off-by: Morena De Liddo <mdeliddo@pivotal.io>

--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -65,7 +65,9 @@ instance_groups:
         kubernetes: ((tls-kubernetes))
   - name: kubernetes-controller-manager
     release: kubo
-    properties: {}
+    properties:
+      tls:
+        kubernetes: ((tls-kubernetes))
   - name: kubernetes-scheduler
     release: kubo
     properties:
