Rename kube-scheduler-password and route-sync-password to api-token
[#153211618]

Signed-off-by: Akshay Mankar <amankar@pivotal.io>

--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -62,7 +62,7 @@ instance_groups:
   - name: kubernetes-scheduler
     release: kubo
     properties:
-      kube-scheduler-password: ((kube-scheduler-password))
+      api-token: ((kube-scheduler-password))
   - name: kubernetes-system-specs
     release: kubo
     properties:
