Split tls.kubernetes for api server
So the release can provide only ca in bosh link

[#153321194]

Signed-off-by: Akshay Mankar <amankar@pivotal.io>

--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -49,7 +49,10 @@ instance_groups:
       port: ((kubernetes_master_port))
       authorization-mode: &authorization_mode ((authorization_mode))
       tls:
-        kubernetes: ((tls-kubernetes))
+        kubernetes:
+          ca: ((tls-kubernetes.ca))
+          certificate: ((tls-kubernetes.certificate))
+          private_key: ((tls-kubernetes.private_key))
   - name: kubernetes-controller-manager
     release: kubo
     properties:
