--- a/configurations/vsphere/project-secrets.yml
+++ b/configurations/vsphere/project-secrets.yml
@@ -1,1 +1,2 @@
-vcenter_password: # vCenter Password
+vcenter_master_password: # vCenter Password for the master node
+vcenter_worker_password: # vCenter Password for the worker nodes
