Working deployment for ETCD with TLS using BOSH DNS
- works with kubo-release/etcd_tls

[#153098701]

Signed-off-by: Brenda Chan <brchan@pivotal.io>
Signed-off-by: Travis Hall <thall@vmware.com>

--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -59,10 +59,6 @@ instance_groups:
       cloud-provider: {as: master}
   - name: flanneld
     release: kubo
-    properties:
-      etcd-ca: ((tls-etcd-server.ca))
-      etcd-client-key: ((tls-etcd-server.private_key))
-      etcd-client-cert: ((tls-etcd-server.certificate))
   - name: kubernetes-api
     release: kubo
     properties:
@@ -104,13 +100,14 @@ instance_groups:
     release: kubo-etcd
     properties:
       etcd:
-        advertise_urls_dns_suffix: etcd.kubo.internal
+        dns_health_check_host: 169.254.0.2
+        advertise_urls_dns_suffix: etcd.service.cf.internal
         require_ssl: true
         peer_require_ssl: false
         delete_data_dir_on_stop: false
-        ca_cert: ((tls-etcd-server.ca))
-        server_cert: ((tls-etcd-server.certificate))
-        server_key: ((tls-etcd-server.private_key))
+        ca_cert: ((etcd-server-certificate.ca))
+        server_cert: ((etcd-server-certificate.certificate))
+        server_key: ((etcd-server-certificate.private_key))
         client_cert: ((tls-etcd-client.certificate))
         client_key: ((tls-etcd-client.private_key))
   stemcell: trusty
@@ -127,10 +124,6 @@ instance_groups:
     release: kubo
   - name: flanneld
     release: kubo
-    properties:
-      etcd-ca: ((tls-etcd-server.ca))
-      etcd-client-key: ((tls-etcd-server.private_key))
-      etcd-client-cert: ((tls-etcd-server.certificate))
   - name: docker
     release: docker
     properties:
@@ -213,12 +206,14 @@ variables:
   options:
     ca: kubo_ca
     common_name: docker.kubo.internal
-- name: tls-etcd-server
+- name: etcd-server-certificate
   type: certificate
   options:
     ca: kubo_ca
     common_name: etcd.service.consul
     alternative_names:
+    - etcd.service.cf.internal
+    - "*.etcd.service.cf.internal"
     - etcd.service.consul
     - "*.etcd.service.consul"
 - name: tls-etcd-client
