--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -150,8 +150,7 @@ instance_groups:
 
 update:
   canaries: 1
-  max_in_flight: 1
-  serial: true
+  max_in_flight: 100%
   canary_watch_time: 10000-300000
   update_watch_time: 10000-300000
 
