--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -100,14 +100,14 @@ instance_groups:
     release: kubo-etcd
     properties:
       etcd:
-        dns_health_check_host: 169.254.0.2
-        advertise_urls_dns_suffix: etcd.service.cf.internal
+        dns_health_check_host: 169.254.0.2 # this is the default BOSH DNS nameserver
+        advertise_urls_dns_suffix: etcd.kubo
         require_ssl: true
         peer_require_ssl: false
         delete_data_dir_on_stop: false
-        ca_cert: ((etcd-server-certificate.ca))
-        server_cert: ((etcd-server-certificate.certificate))
-        server_key: ((etcd-server-certificate.private_key))
+        ca_cert: ((tls-etcd-server.ca))
+        server_cert: ((tls-etcd-server.certificate))
+        server_key: ((tls-etcd-server.private_key))
         client_cert: ((tls-etcd-client.certificate))
         client_key: ((tls-etcd-client.private_key))
   stemcell: trusty
@@ -206,16 +206,14 @@ variables:
   options:
     ca: kubo_ca
     common_name: docker.kubo.internal
-- name: etcd-server-certificate
+- name: tls-etcd-server
   type: certificate
   options:
     ca: kubo_ca
-    common_name: etcd.service.consul
+    common_name: etcd.kubo
     alternative_names:
-    - etcd.service.cf.internal
-    - "*.etcd.service.cf.internal"
-    - etcd.service.consul
-    - "*.etcd.service.consul"
+    - etcd.kubo
+    - "*.etcd.kubo"
 - name: tls-etcd-client
   type: certificate
   options:
