--- a/manifests/ops-files/iaas/openstack/master-static-ip.yml
+++ b/manifests/ops-files/iaas/openstack/master-static-ip.yml
@@ -7,3 +7,10 @@
 - type: replace
   path: /instance_groups/name=master/networks/0/default?
   value: [dns, gateway]
+
+- type: replace
+  path: /variables/name=tls-kubernetes/options/common_name
+  value: ((kubernetes_master_host))
+- type: replace
+  path: /variables/name=tls-kubernetes/options/alternative_names/-
+  value: ((kubernetes_master_host))
