--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -107,13 +107,16 @@ instance_groups:
         dns_health_check_host: 169.254.0.2 # this is the default BOSH DNS nameserver
         advertise_urls_dns_suffix: etcd.kubo
         require_ssl: true
-        peer_require_ssl: false
+        peer_require_ssl: true
         delete_data_dir_on_stop: false
         ca_cert: ((tls-etcd-server.ca))
         server_cert: ((tls-etcd-server.certificate))
         server_key: ((tls-etcd-server.private_key))
         client_cert: ((tls-etcd-client.certificate))
         client_key: ((tls-etcd-client.private_key))
+        peer_ca_cert: ((tls-etcd-peer.ca))
+        peer_cert: ((tls-etcd-peer.certificate))
+        peer_key: ((tls-etcd-peer.private_key))
   stemcell: trusty
   vm_type: small
   persistent_disk: 5120
@@ -225,6 +228,13 @@ variables:
   options:
     ca: kubo_ca
     common_name: etcdClient
+- name: tls-etcd-peer
+  type: certificate
+  options:
+    ca: kubo_ca
+    common_name: etcd.kubo
+    alternative_names:
+    - "*.etcd.kubo"
 
 - name: /dns_healthcheck_tls_ca
   opsname: global_dns_healthcheck_tls_ca
