deploy_bosh hides secrets including during debugging/tests
* deploy_utils hides bosh secret
* set_bosh_alias hides secrets
* set_bosh_environment hides secrets
* test environments with creds for vSphere, Openstack, AWS and GCP
include the word 'test' within cred values being matched

[#153851093]

Signed-off-by: Konstantin Semenov <ksemenov@pivotal.io>

--- a/src/kubo-deployment-tests/resources/environments/test_gcp_with_creds/director-secrets.yml
+++ b/src/kubo-deployment-tests/resources/environments/test_gcp_with_creds/director-secrets.yml
@@ -1,2 +1,2 @@
 
-routing_cf_client_secret: cf.client.secret # UAA client secret for routing client
+routing_cf_client_secret: test-cf.client.secret # UAA client secret for routing client
