--- a/src/kubo-deployment-tests/resources/environments/test_openstack_with_creds/director-secrets.yml
+++ b/src/kubo-deployment-tests/resources/environments/test_openstack_with_creds/director-secrets.yml
@@ -3,4 +3,4 @@
 # routing_cf_client_secret: # UAA client secret for routing client
 # routing_cf_nats_password: # Password for Cloud Foundry NATS
 
-openstack_password: # admin user password for OpenStack
+openstack_password: test-openstack-password-string # admin user password for OpenStack
