--- a/src/kubo-deployment-tests/resources/environments/test_vsphere_with_creds/director-secrets.yml
+++ b/src/kubo-deployment-tests/resources/environments/test_vsphere_with_creds/director-secrets.yml
@@ -1,1 +1,1 @@
-routing_cf_client_secret: cf.client.secret # UAA client secret for routing client
+routing_cf_client_secret: test-routing-cf-client-secret # UAA client secret for routing client
