--- a/src/kubo-deployment-tests/resources/environments/test_gcp_with_creds/creds.yml
+++ b/src/kubo-deployment-tests/resources/environments/test_gcp_with_creds/creds.yml
@@ -1,4 +1,4 @@
-credhub_user_password: password
-bosh_admin_client_secret: secret
+credhub_user_password: test-credhub-user-password
+bosh_admin_client_secret: test-bosh-admin-client-secret
 default_ca:
   ca: I-am-a-bosh-ca-cert
