Changing max_in_flight property for a new deployment
The default value of max_in_flight proprty has been changed to 1. A
check has been implemented in deploy_k8s script to check for a
new/existing deployment and accordingly update the max_in_flight
property to 100% for a new deployment.

[#154051299]

--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -171,7 +171,7 @@ instance_groups:
 
 update:
   canaries: 1
-  max_in_flight: 100%
+  max_in_flight: 1
   canary_watch_time: 10000-300000
   update_watch_time: 10000-300000
 
