Prevent leaking secrets in set_kubeconfig
[#153851093]

Signed-off-by: Konstantin Semenov <ksemenov@pivotal.io>

--- a/src/kubo-deployment-tests/resources/environments/test_gcp_with_creds/creds.yml
+++ b/src/kubo-deployment-tests/resources/environments/test_gcp_with_creds/creds.yml
@@ -2,3 +2,8 @@ credhub_user_password: test-credhub-user-password
 bosh_admin_client_secret: test-bosh-admin-client-secret
 default_ca:
   ca: I-am-a-bosh-ca-cert
+uaa_ssl:
+  ca: TEST CERTIFICATE
+credhub_tls:
+  ca: ANOTHER TEST CERTIFICATE
+credhub_cli_password: MOCK_PASSWORD
