Intial Azure support

--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -153,6 +153,8 @@ instance_groups:
     release: kubo
   - name: flanneld
     release: kubo
+  - name: cifs-utils
+    release: kubo
   - name: docker
     release: docker
     properties:
