--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -139,6 +139,8 @@ instance_groups:
   jobs:
   - name: flanneld
     release: kubo
+  - name: cifs-utils
+    release: kubo
   - name: docker
     properties:
       bridge: cni0
