Set RBAC as the authorization mode generated by default
Signed-off-by: Konstantin Semenov <ksemenov@pivotal.io>

--- a/configurations/generic/project-config.yml
+++ b/configurations/generic/project-config.yml
@@ -16,7 +16,7 @@ routing_mode: iaas
 kubernetes_master_host: # IP address that can be used to reach the Kubernetes API, usually the address of a load balancer or static IP
 master_target_pool: # target pool that master nodes will be a part of
 
-authorization_mode: abac # RBAC or ABAC authorization modes for the K8s cluster. Note: RBAC is not stable as of 0.8.x.
+authorization_mode: rbac # RBAC or ABAC authorization modes for the K8s cluster.
 
 # CF routing mode settings
 # Uncomment and configure the lines below to leverage CF routing instead of IaaS routing
