--- a/manifests/ops-files/iaas/openstack/cloud-provider.yml
+++ b/manifests/ops-files/iaas/openstack/cloud-provider.yml
@@ -1,21 +1,42 @@
 - type: replace
-  path: /instance_groups/name=master/jobs/name=cloud-provider/properties/cloud-provider?
+  path: /instance_groups/name=master/jobs/-
   value:
-    type: openstack
-    openstack:
-      auth-url: ((auth_url))
-      username: ((openstack_username))
-      password: ((openstack_password))
-      tenant-id: ((openstack_project_id))
-      domain-name: ((openstack_domain))
+    name: cloud-provider
+    release: kubo
+    properties:
+      cloud-provider:
+        type: openstack
+        openstack:
+          auth-url: ((auth_url))
+          username: ((openstack_username))
+          password: ((openstack_password))
+          tenant-id: ((openstack_project_id))
+          domain-name: ((openstack_domain))
+    provides:
+      cloud-provider: {as: master}
+    consumes:
+      cloud-provider: {from: worker}
 
 - type: replace
-  path: /instance_groups/name=worker/jobs/name=cloud-provider/properties/cloud-provider?
+  path: /instance_groups/name=master/jobs/name=kubernetes-system-specs/consumes?
   value:
-    type: openstack
-    openstack:
-      auth-url: ((auth_url))
-      username: ((openstack_username))
-      password: ((openstack_password))
-      tenant-id: ((openstack_project_id))
-      domain-name: ((openstack_domain))
+    cloud-provider: {from: master}
+
+- type: replace
+  path: /instance_groups/name=worker/jobs/-
+  value:
+    name: cloud-provider
+    release: kubo
+    properties:
+      cloud-provider:
+        type: openstack
+        openstack:
+          auth-url: ((auth_url))
+          username: ((openstack_username))
+          password: ((openstack_password))
+          tenant-id: ((openstack_project_id))
+          domain-name: ((openstack_domain))
+    provides:
+      cloud-provider: {as: worker}
+    consumes:
+      cloud-provider: {from: worker}
