--- a/configurations/aws/project-config.yml
+++ b/configurations/aws/project-config.yml
@@ -6,3 +6,9 @@ region: # AWS Region ID
 master_iam_instance_profile: # IAM Instance profile required by cloud provider on k8s master
 worker_iam_instance_profile: # IAM Instance profile required by cloud provider on k8s worker
 kubernetes_cluster_tag: # Tag to match public ELB subnet, Kubo workers subnet and Kubo worker VMs to make Kubernetes support ELB
+
+# IaaS routing mode settings
+# Comment out this section when using CF routing mode
+routing_mode: iaas
+kubernetes_master_host: # IP address that can be used to reach the Kubernetes API, usually the address of a load balancer or static IP
+master_target_pool: # target pool that master nodes will be a part of
